--- a/2/index.html
+++ b/2/index.html
@@ -44,11 +44,11 @@
     <div>
         <div>
             <div><h1>manufacturer</h1></div>
-            <select multiple>
-                <option value="aaa">aaa</option>
-                <option value="b&c">b&c</option>
-                <option value="ddd">ddd</option>
-                <option value="ddd">eee</option>
+            <select id="section" multiple>
+                <option class="option" value="aaa">aaa</option>
+                <option class="option" value="b%26c">b&c</option>
+                <option class="option" value="ddd">ddd</option>
+                <option class="option" value="eee">eee</option>
             </select>
         </div>
     </div>
